--- a/Taskify.html
+++ b/Taskify.html
@@ -6,6 +6,8 @@
 <title>Taskify.js</title>
 
     <script language="javascript" src="Taskify.js"></script>
+    <script language="javascript" src="Reminder.js"></script>
+    <script language="javascript" src="Commands.js"></script>
 </head>
 
 <body>
